# cryprq

./: .dockerignore  .gitignore  .markdownlint.json  .mlc.json  BUG_SUMMARY.md  CHANGELOG.md  CITATION.cff  CI_FIXES_DELIVERABLE.md  CI_FIXES_SUMMARY.md  CLEANUP_INSTRUCTIONS.md  COMMIT_MESSAGE.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRIBUTING.md  Cargo.toml  CertificateSigningRequest.certSigningRequest  DUAL_LICENSE.md  Dockerfile  Dockerfile.reproducible  Dockerfile.test  Dockerfile.web  FILE_TRANSFER_LIVE_DEMONSTRATION_REPORT.md  FILE_TRANSFER_LIVE_TEST_REPORT.md  FILE_TRANSFER_VPN_MODE_COMPREHENSIVE_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_DELIVERABLES_COMPLETE.md  FINAL_RELEASE_STEPS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MASTER_PROMPT_WEB_TESTER_FIX.md  Makefile  OBSERVABILITY_METRICS_PLAN.md  OPERATOR_CHEAT_SHEET.txt  PACKAGES.md  PATCH_REPORT.md  PRODUCTION_READINESS_FINAL.md  PRODUCTION_READY.md  PROTOCOL_ALIGNMENT_REPORT.md  PR_DESCRIPTION.md  README.md  (+73 more)
.cargo/: .global-cache
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml
.github/ISSUES/: 001-align-web-backend-record-layer.md  002-wire-web-ui-file-transfer.md  003-docker-web-deployment.md  004-web-validation-security.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/wiki/: Getting-Started.md  Home.md  Testing.md  Troubleshooting.md  VPN-Setup.md
.github/workflows/: ci.yml  codeql.yml  docker-multiarch.yml  docker-test.yml  docs-ci.yml  extended-testing.yml  fuzz-nightly.yml  fuzz.yml  gui-ci.yml  harden-runner.yml  icon-enforcement.yml  icons.yml  maintenance-cleanup.yml  (+17 more)
android/: .gitignore  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  CrypRqNative.cpp
apple/: Package.swift  README.md
benches/: Cargo.toml  handshake_bench.rs  rotation_bench.rs
benches/src/: lib.rs
benchmarks/: vpn_perf.sh
cli/: Cargo.toml  build.rs
cli/src/: main.rs
config/: flags.json
core/: Cargo.toml
core/src/: error.rs  ffi.rs  handle.rs  lib.rs  record.rs  util.rs
cryprq/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
cryprq/cli/: Cargo.toml
cryprq/cli/src/: main.rs
cryprq/crypto/: Cargo.toml
cryprq/crypto/src/: lib.rs
cryprq/node/: Cargo.toml
cryprq/node/src/: main.rs
cryprq/p2p/: Cargo.toml
cryprq/p2p/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: hybrid.rs  kat_tests.rs  kdf.rs  lib.rs  ppk.rs  pqc_suite.rs  property_expanded.rs  property_tests.rs  tests.rs  zkp.rs
crypto/tests/: fips203_kat_loader.rs  kat_loader.rs  property_expanded.rs  rfc7748_kat.rs  rfc8439_kat.rs  zeroization_tests.rs
crypto/tests/data/fips203/: README.md
crypto/tests/data/rfc7748/: README.md
crypto/tests/data/rfc8439/: README.md
crypto/tests/kat_vectors/: README.md
docs/: ABSOLUTE_FINAL_VERIFICATION_REPORT.md  ANNOUNCEMENT_SNIPPETS.md  AUTOMATED_TESTING.md  AUTOMATION_SUMMARY.md  BENCHMARK_SCHEDULE.md  BEST_PRACTICES.md  BLOG_OVERVIEW.md  BUILD_STATUS.md  CI_CD.md  CI_MAINTENANCE.md  CI_OPTIMIZATION_REPORT.md  COMPLETE.md  COMPREHENSIVE_TEST_OPTIMIZATION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONNECTION_TROUBLESHOOTING.md  CRYPTO_ENHANCEMENTS.md  CUT_THE_RELEASE.md  DAY0_ONCALL_CARD.md  DAY0_QUICK_REFERENCE.md  DEPENDENCY_MONITORING.md  DEPLOYMENT.md  DEVELOPMENT.md  DEV_WATCHER_HARDENING.md  DEV_WATCHER_QUICKSTART.md  DEV_WATCHER_SERVICE.md  DOCKER.md  DOCKER_TESTING.md  DOCKER_VPN_LOGS.md  DOCKER_VPN_QUICKSTART.md  DOCKER_VPN_ROUTING.md  DOCKER_VPN_SETUP.md  DOCKER_VPN_SUMMARY.md  DOCKER_WEB_GUIDE.md  DOCS_CLEANUP_SUMMARY.md  DOCS_GUARDRAILS.md  EDGE_CASE_IMPROVEMENTS.md  EXPLORATORY_TESTING.md  FEATURE_FLAGS_TELEMETRY.md  FILE_TRANSFER.md  FINALIZATION_SUMMARY.md  (+106 more)
fuzz/: Cargo.toml
fuzz/corpus/multiaddr_parse/: basic
fuzz/fuzz_targets/: handshake_state.rs  hybrid_handshake.rs  key_rotation.rs  multiaddr_parse.rs  ppk_derivation.rs  protocol_parse.rs
gui/: .dockerignore  .eslintrc.json  .gitignore  CHANGELOG.md  Makefile  README.md  README_DOCKER.md  SUMMARY.md  docker-compose.yml  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vitest.config.ts
macos/: launch.sh
mobile/: .detoxrc.js  .eslintrc.js  .gitignore  README.md  app.json  docker-compose.yml  index.js  package.json  tsconfig.json
monitoring/: binary-size.txt
node/: Cargo.toml
node/src/: crypto_utils.rs  dns.rs  error.rs  file_transfer.rs  lib.rs  metrics.rs  padding.rs  record_layer.rs  rotate.rs  seq_counters.rs  tests.rs  tls.rs  traffic_shaping.rs  tun.rs  wire.rs
p2p/: Cargo.toml
p2p/src/: device_id.rs  dht_bootstrap.rs  error.rs  file_transfer.rs  lib.rs  metrics.rs  packet_forwarder.rs  tests.rs
release-20250112/: PRODUCTION_SUMMARY.md
scripts/: add-headers.sh  android-mipmap-validate.sh  automated-browser-test.sh  benchmark.sh  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-musl.sh  build-web-and-mac.sh  charts-validation.sh  check-doc-links.sh  check-docker-vpn-status.sh  check-no-emojis.sh  ci-cleanup.sh  ci-health-check.sh  clean-docs.sh  cleanup-ci-cache.sh  cleanup.sh  codeql-analysis.sh  com.cryrpq.devwatch.plist.example  complete-release.sh  compliance-checks.sh  crypto-validation.sh  cutover_smoke.sh  dev-watch.service.example  dev-watch.sh  docker-qa-suite.sh  docker-setup.sh  docker-smoketest.sh  docker-test-individual.sh  docker-vpn-start.sh  docker-vpn-stop.sh  docker_vpn_idtest.sh  docker_vpn_pairtest.sh  docker_vpn_test.sh  dynamic-analysis.sh  end-to-end-tests.sh  exploratory-testing.sh  extensive-vpn-test.sh  (+104 more)
store/: README.md  validate.mjs
supply-chain/: security.md
tests/: browser-docker.spec.ts  web.spec.ts
web/: README.md  eslint.config.js  package-lock.json  package.json  run-automated-tests.sh  start-web-ui.sh  test-automated-comprehensive.js  test-automated.js  test-full-live-automated.js  test-manual-debug.js  test-vpn-toggle-automated.js  test-vpn.js  test-web-tester-automated.js  vite.config.ts
xtask/: Cargo.toml
(+207 files in other folders)
