[package]
name = "cryprq"
version = "0.1.0"
edition = "2021"

[dependencies]
cryprq-crypto = { path = "../crypto" }
p2p = { path = "../p2p" }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
libp2p = { version = "0.54", features = ["macros", "tcp", "noise", "yamux", "mdns", "quic", "tokio"] }
ed25519-dalek = "2.1"
anyhow = "1"
hex = "0.4"
futures = "0.3"
void = "1"
log = "0.4"
