# © 2025 Thor Thor
# Contact: codethor@gmail.com
# LinkedIn: https://www.linkedin.com/in/thor-thor0
# SPDX-License-Identifier: MIT

[package]
name = "cryprq"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cryprq-crypto = { path = "../crypto" }
p2p = { path = "../p2p" }
node = { path = "../node" }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2.1"
sha2 = "0.10"
anyhow = "1"
hex = "0.4"
futures = "0.3"
futures-util = "0.3"
libp2p = { version = "0.56", features = ["tokio"] }
void = "1"
log = "0.4"
env_logger = "0.11"
