[package]
name = "cryp-rq-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CrypRQ FFI core for cross-platform hosts"

[lib]
name = "cryprq_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
once_cell = "1.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
log = "0.4"
env_logger = "0.11"
chacha20poly1305 = "0.10"
# p2p dependency removed to break cycle: core -> p2p -> node -> core
# handle.rs will need to be refactored or p2p made optional

