# © 2025 Thor Thor
# Contact: codethor@gmail.com
# LinkedIn: https://www.linkedin.com/in/thor-thor0
# SPDX-License-Identifier: MIT

[package]
name = "cryprq-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8"
blake3 = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
pqcrypto-mlkem = "0.1.1"
pqcrypto-traits = "0.3"
proptest = { version = "1.5", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1.5"
hex = "0.4"

[features]
std = []

