# © 2025 Thor Thor
# Contact: codethor@gmail.com
# LinkedIn: https://www.linkedin.com/in/thor-thor0
# SPDX-License-Identifier: MIT

[package]
name = "cryprq-fuzz"
version = "0.0.0"
edition = "2021"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cryprq-crypto = { path = "../crypto" }
p2p = { path = "../p2p" }
pqcrypto-mlkem = "0.1.1"
pqcrypto-traits = "0.3"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/hybrid_handshake.rs"

[[bin]]
name = "fuzz_target_2"
path = "fuzz_targets/protocol_parse.rs"

[[bin]]
name = "fuzz_target_3"
path = "fuzz_targets/key_rotation.rs"

[[bin]]
name = "fuzz_target_4"
path = "fuzz_targets/ppk_derivation.rs"

