[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
ring = "0.17"
x25519-dalek = "2.0.1"
chacha20poly1305 = "0.10"
blake3 = "1"
zeroize = "1.8"
rand_core = { version = "0.6", features = ["getrandom"] }
ed25519-dalek = "2.1"
rand = "0.8"
bytes = "1.5"
crossbeam = "0.8"

# Force older base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"
