# © 2025 Thor Thor
# Contact: codethor@gmail.com
# LinkedIn: https://www.linkedin.com/in/thor-thor0
# SPDX-License-Identifier: MIT

[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54", features = [
    "tcp",
    "noise",
    "yamux",
    "quic",
    "tokio",
    "macros",
    "mdns",
    "ping"
] }
libp2p-kad = { version = "0.48.0" }
cryprq-crypto = { path = "../crypto" }
zeroize = "1.8"
once_cell = "1.21"
log = "0.4"
void = "1"

# This was the missing dependency
thiserror = "1.0"
