# © 2025 Thor Thor
# Contact: codethor@gmail.com
# LinkedIn: https://www.linkedin.com/in/thor-thor0
# SPDX-License-Identifier: MIT

[package]
name = "cryprq-node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.42", features = ["quic"] }
kyber = { version = "0.1", features = ["kyber768"] }
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
    "../crypto",
    "../p2p",
    "../cli",
]