# © 2025 Thor Thor
# Contact: codethor@gmail.com
# LinkedIn: https://www.linkedin.com/in/thor-thor0
# SPDX-License-Identifier: MIT

[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.42", features = ["tcp-tokio", "dns-tokio", "quic", "yamux"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"